dnl Process this file with autoconf to produce a configure script.
AC_INIT(ax25/ax25d.c)

dnl For automake
VERSION=0.0.1
PACKAGE=ax25-tools
AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_CONFIG_HEADER(config.h)



dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
AC_CHECK_LIB(z, zlibVersion)
dnl AC_SUBST(AX25_LIB)
dnl AC_CHECK_LIB(ax25, ax25_config_load_ports, AX25_LIB="-lax25", AX25_LIB=,-lz)
AC_CHECK_LIB(ax25, ax25_config_load_ports,,,-lz)
AC_SUBST(NCURSES_LIB)
AC_CHECK_LIB(ncurses, initscr,NCURSES_LIB="-lncurses",NCURSES_LIB=)

AC_CHECK_LIB(util, openpty)
AC_PATH_XTRA

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h paths.h strings.h sys/file.h sys/ioctl.h sys/time.h syslog.h unistd.h)

dnl Check for ceratin functions in header files
AC_HEADER_EGREP(ax25_fwd_struct, netax25/ax25.h, AC_DEFINE(HAVE_AX25_FWD_STRUCT))
AC_HEADER_EGREP(AX25_IAMDIGI, netax25/ax25.h, AC_DEFINE(HAVE_AX25_IAMDIGI))
AC_HEADER_EGREP(AX25_PIDINCL, netax25/ax25.h, AC_DEFINE(HAVE_AX25_PIDINCL))



dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_PID_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_SETPGRP
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_WAIT3
AC_CHECK_FUNCS(gethostname gettimeofday mkdir select socket strdup strerror strspn strstr strtol strtoul uname)

AC_OUTPUT(netrom/Makefile tcpip/Makefile ax25/Makefile Makefile rose/Makefile user_call/Makefile kiss/Makefile hdlcutil/Makefile)
